overflow fix

--- a/Sloth.Web/wwwroot/scss/components.scss
+++ b/Sloth.Web/wwwroot/scss/components.scss
@@ -117,4 +117,7 @@ table#integrationsTable {
 }
 .responsive-table {
   overflow-x: auto;
+  @include breakpoint(md) {
+    overflow: inherit;
+  }
 }
